<resources>
    <string name="app_name">restaurangmeny</string>
    <string name="pinar_buffet">Pinar Buffet</string>
    <string name="maincourses">Maincourses</string>
    <string name="desserts">Desserts</string>
    <string name="dishes1">dishes1</string>
    <string name="dishes2">dishes2</string>
    <string name="dishes3">dishes3</string>
    <string name="order">Order</string>
    <string name="total">Total:</string>
    <string name="_0_kr">0 kr</string>
    <string name="köp">Beställ</string>
    <string name="price_format">%.2f kr</string>
    <string name="added_to_cart_format">%d %s har lagts till</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="add_to_cart">Lägg till</string>
</resources>