<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFEBE6"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/restaurant_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/pinar_buffet"
            android:textSize="34sp" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/appetizers_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Appetizers"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/main_courses_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maincourses" />

            <Button
                android:id="@+id/desserts_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/desserts" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dish_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/appetizer_1_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/appetizers1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="8dp">

                <TextView
                    android:id="@+id/dish_1_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dishes1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dish_1_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Beskrivning av maträtt 1"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dish_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/appetizer_2_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/appetizers2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="8dp">

                <TextView
                    android:id="@+id/dish_2_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dishes2"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dish_2_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Beskrivning av maträtt 2"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dish_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/appetizer_3_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/appetizers3" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"
                tools:ignore="RtlSymmetry">


                <TextView
                    android:id="@+id/dish_3_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dishes3"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dish_3_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Beskrivning av maträtt 3"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>